# releaseer

./: .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTERS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  continous-deployment.yaml  continous-integration.yaml  continous-release.yaml  conventional-commits.yaml  scorecard.yml
docs/: future.md
releaseer/: __init__.py  app.py  data.py  names.yaml
tests/: __init__.py  conftest.py  test_base.py  test_shiny.py
